user can change password

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,8 @@ html
         a(href='/tasks') Task List 
         br
         a(href='/tasks/create') Create Task
+        br
+        a(href='/changePassword') Change Password
         br 
         a(href='/logout') Log Out 
     main
