added tailwindcss, worked on login page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,11 +2,11 @@ doctype html
 html
   head
     title Task Manager
-        
+    link(rel="stylesheet", href="styles.css")
   body
     header
       h1 Task Manager
-      h2 You are logged in as #{user}
+      h2.text-6xl You are logged in as #{user}
       nav
         a(href='/tasks') Task List 
         br
