--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ html
   head
     title Login
     link(rel="stylesheet", href="styles.css")
-  body.bg-blue-300.m-6
+  body.body
     div.flex.flex-col.items-center.justify-center.h-screen
       div.bg-blue-300.my-20.border.rounded-3xl.bg-blue-500.p-6
 
