--- a/views/login.pug
+++ b/views/login.pug
@@ -11,9 +11,9 @@ html
         br
         div
           form(action="/login" method="POST")
-            input(name="username" type="text" required placeholder="Name" class="mb-3 p-2 rounded")
+            input(name="username" type="text" required placeholder="Name" class="mb-3 p-2 rounded-full")
             br
-            input(name="password" type="password" required placeholder="Password" class="mb-3 p-2 rounded")
+            input(name="password" type="password" required placeholder="Password" class="mb-3 p-2 rounded-full")
             br
             div.flex.justify-center.mb-5
                 button(type="Submit" class="bg-green-600 text-white px-4 py-2 rounded-full border border-blue-900 hover:bg-green-800") Log in
