--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,23 +5,46 @@ html
     //link(rel="stylesheet", href="/public/styles.css")
     style 
       include ../public/styles.css
-  body
+  body.p-6.bg-sky-100
     div
       header
-        div  
-          span.uppercase #{user}
-      div.flex.justify-end
-        a(href='/logout') Log Out 
-    div
-      nav
-        a(href='/tasks') Task List 
-        br
-        a(href='/tasks/create') Create Task
-        br
-        a(href='/changePassword' class="flex justify-") Change Password
+        div
+          div.flex.justify-between.mb-3.items-center
+            span.font-bold.text-3xl TASK MANAGER
+            div
+              span.uppercase #{user}
+              <svg class='w-8 inline-block ml-2' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
+              </svg>
+
+          div.flex.justify-end
+            a(href='/logout' class= "border border-blue-900 hover: bg-red-400 text-white px-4 py-2 rounded-full  hover:bg-red-800") Log Out 
+    div.grid.grid-cols-12.gap-4
+      div.col-span-2.border-r.border-red-200
+        nav
+          div.flex.items-center.border-r-4.border-red-400
+            <svg class='w-5 inline-block mr-2' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75h12M8.25 12h12m-12 5.25h12M3.75 6.75h.007v.008H3.75V6.75zm.375 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zM3.75 12h.007v.008H3.75V12zm.375 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm-.375 5.25h.007v.008H3.75v-.008zm.375 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+            </svg>
+            a(href='/tasks') Task List 
 
 
-    main
-      block content
-    footer
+
+          div.flex.items-center
+            <svg class='w-5 inline-block mr-2' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+            </svg> 
+            a(href='/tasks/create') Create Task
+
+
+          div.flex.items-center
+            <svg class='w-5 inline-block mr-2' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15 9h3.75M15 12h3.75M15 15h3.75M4.5 19.5h15a2.25 2.25 0 002.25-2.25V6.75A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25v10.5A2.25 2.25 0 004.5 19.5zm6-10.125a1.875 1.875 0 11-3.75 0 1.875 1.875 0 013.75 0zm1.294 6.336a6.721 6.721 0 01-3.17.789 6.721 6.721 0 01-3.168-.789 3.376 3.376 0 016.338 0z" />
+            </svg>
+            a(href='/changePassword') Change Password
+
+      main.col-span-10
+        block content
+
+    //footer
       p Copyright © 2023 Task Manager App
