Done with design

--- a/views/change-password.pug
+++ b/views/change-password.pug
@@ -1,20 +1,20 @@
 extends layout
 
 block content
-        H3 Change Password
+        H3.font-bold.text-xl Change Password
         div
             form(action = "/changePassword" method = "POST")
                 div
-                    input(name = "oldPassword" type = "password" required placeholder = "old Password")
-                br
+                    input(name = "oldPassword" type = "password" required placeholder = "old Password", class="mb-3 p-2 rounded-xl bg-gray-700 text-white w-52")
+    
                 div    
-                    input(name = "newPassword" type = "password" required placeholder = "New Password")
-                br
+                    input(name = "newPassword" type = "password" required placeholder = "New Password", class="mb-3 p-2 rounded-xl bg-gray-700 text-white w-52")
+
                 div
-                    input(name = "confirmPassword" type = "password" required placeholder = "Confirm New Password")
-                br
+                    input(name = "confirmPassword" type = "password" required placeholder = "Confirm New Password", class="mb-3 p-2 rounded-xl bg-gray-700 text-white w-52")
+        
                 div
-                    button(type = "Submit") Change Password
+                    button(type = "Submit" class="bg-green-600 text-white px-4 py-2 rounded-3xl border border-blue-900 hover:bg-green-800") Change Password
 
             if(message)
                 h4 #{message}
