--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ html
     link(rel="stylesheet", href="styles.css")
   body.body
     div.flex.flex-col.items-center.justify-center.h-screen
-      div.bg-blue-300.my-20.border.rounded-3xl.bg-blue-500.p-6
+      div.bg-blue-500.my-20.border.rounded-3xl.p-6
 
         div.flex.justify-center.uppercase.font-bold.text-white.text-xl
           h3 Login
